# homework_2.1

./: README.md  pyproject.toml  requirements.txt
src/: base_product.py  category.py  exceptions.py  lawn_grass.py  print_mixin.py  prod_json.py  product_iterator.py  products.py  smartphone.py
tests/: conftest.py  test_category.py  test_lawn_grass.py  test_print_mixin.py  test_products.py  test_smartphone.py
